FIX song table overflowing to now playing bar

--- a/src/SharedStyles/_grid.scss
+++ b/src/SharedStyles/_grid.scss
@@ -28,6 +28,7 @@
 }
 
 .center-wrapper {
+  overflow: auto;
   position: absolute;
   right: 0;
   top: $search-bar-height;
